# hudwiz

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  server_config.toml
.cargo/: config.toml
docs/collateral/: CONTRIBUTING.md  integration_guide.md  release_notes.md  user_guide.md
hudwiz/frontend/: Cargo.toml  index.html
hudwiz/frontend/src/: auth.rs  lib.rs  router.rs
hudwiz/frontend/src/components/: background_renderer.rs  content_renderer.rs  main_layout.rs  mod.rs  panel.rs  private_route.rs  status_bar.rs
hudwiz/frontend/src/components/app_bar/: app_bar_toolbar.rs  avatar_menu.rs  mod.rs
hudwiz/frontend/src/components/blocks/: login_form.rs  user_profile_card.rs
hudwiz/frontend/src/components/chat/: chat_history_view.rs  chat_input_bar.rs  mod.rs
hudwiz/frontend/src/components/content/: main_svg_content.rs  mod.rs
hudwiz/frontend/src/components/headless/: button.rs
hudwiz/frontend/src/components/hud/: activity_bar.rs  app_bar.rs  background_canvas.rs  background_svg.rs  floating_toolbar.rs  hud_bottom_left.rs  hud_bottom_right.rs  hud_top_left.rs  hud_top_right.rs  main_panel.rs  mod.rs  sidebar_left.rs  sidebar_right.rs
hudwiz/frontend/src/components/layouts/: bento_grid.rs  mod.rs
hudwiz/frontend/src/pages/: landing_page.rs  login_page.rs  main_page.rs  mod.rs  settings_page.rs  signup_page.rs
hudwiz/frontend/src/plugins/: clock.rs  map.rs  mod.rs  system_stats.rs  video.rs
hudwiz/frontend/src/services/: animation_service.rs  api_service.rs  auth_service.rs  config_service.rs  i18n_service.rs  mod.rs  realtime_provider.rs  realtime_service.rs  state_service.rs  theme_service.rs  transport.rs  transport_manager.rs  websocket_transport.rs  webtransport_service.rs  webtransport_transport.rs
hudwiz/frontend/static/: config.json
hudwiz/frontend/static/locales/en-US/: main.ftl
hudwiz/frontend/static/locales/es-ES/: main.ftl
hudwiz/frontend/style/: animations.css  main.css
hudwiz/server/: Cargo.toml  server_config.toml
hudwiz/server/src/: auth.rs  config.rs  lib.rs  main.rs  sso.rs  webtransport.rs
hudwiz/server/tests/: integration_test.rs
scripts/: eject_block.sh  run_system_test.sh  services.env  verify.py
