[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
material-yew = { git = "https://github.com/constructableconcepts/material-yew", branch = "update-yew-0.21" }
web-sys = { version = "0.3", features = ["Window", "Document", "WebSocket", "WebTransportReceiveStream", "WebTransportBidirectionalStream", "Element", "DomTokenList"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-wasm = "0.2"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3"
gloo-utils = "0.1"
gloo-console = "0.2.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
gloo-net = { version = "0.2", features = ["json"] }
gloo-storage = "0.2"
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
yew-webtransport = "0.21.1"
anymap3 = "1.0"
fluent-templates = "0.13.1"
unic-langid = "0.9.6"

[features]
mock_api = []
