[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower-cookies = { version = "0.11.0", features = ["signed"] }
tower-sessions = "0.14.0"
tower-sessions-memory-store = "0.14.0"
wtransport = { version = "0.6.1", features = ["self-signed"] }
rcgen = "0.13.1"
oauth2 = { version = "4.4", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
config = { version = "0.14", features = ["toml"] }
argon2 = "0.5"
rand = "0.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2.0"
url = "2.2"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
